# thymatichealth

./: .gitignore  README.md
thymatic-health/: PLAN.md  README.md
thymatic-health/backend/: pyproject.toml
thymatic-health/backend/app/: main.py  models.py
thymatic-health/backend/app/routes/: score.py  session.py  video.py  visual.py
thymatic-health/backend/app/services/: bridge.py  fal.py  gemini_live.py  pose.py  scoring.py  sentinel.py
thymatic-health/docs/: ARCHITECTURE.md  DUAL_MODE_SPEC.md  INTEGRATION-NOTES.md
thymatic-health/frontend/: README.md  next.config.ts  package.json  pnpm-lock.yaml
thymatic-health/frontend/app/: globals.css  layout.tsx  page.tsx
thymatic-health/frontend/app/api/session/start/: route.ts
thymatic-health/frontend/app/api/speechmatics-token/: route.ts
thymatic-health/frontend/app/session/: page.tsx
thymatic-health/frontend/app/upload/: page.tsx
thymatic-health/frontend/components/: CoachReply.tsx  MicOrb.tsx  ScoreCard.tsx  SentinelBadges.tsx  TranscriptStream.tsx
thymatic-health/frontend/lib/: audio.ts  sentinelSocket.ts  speechmatics.ts  store.ts  visual.ts
